tests/baselines/reference/discriminateWithMissingProperty.errors.txt
discriminateWithMissingProperty.ts(12,24): error TS2322: Type 'Uint8Array' is not assignable to type 'number'.


==== discriminateWithMissingProperty.ts (1 errors) ====
    type Arg = {
        mode: "numeric",
        data: number,
    } | {
        mode: "alphabetic",
        data: string,
    } | {
        data: string | Uint8Array;
    }
    
    declare function foo(arg: Arg): void;
    foo({ mode: "numeric", data: new Uint8Array([30]) }); // Should error
                           ~~~~
!!! error TS2322: Type 'Uint8Array' is not assignable to type 'number'.
!!! related TS6500 discriminateWithMissingProperty.ts:3:5: The expected type comes from property 'data' which is declared here on type 'Arg'